# git-translate-commits

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: publish.yml  tests.yml
docs/: index.html
src/git_translate_commits/: __init__.py  cli.py  git_reader.py  language_detector.py  models.py  pipeline.py  reporter.py  rewriter.py  translator.py  translator_base.py  translator_local.py
tests/: test_language_detector.py  test_models.py  test_translator.py  test_translator_local.py
